增加获取交易记录接口
